uh i forgor to release these

--- a/localisation/english/MM_countries_l_english.yml
+++ b/localisation/english/MM_countries_l_english.yml
@@ -6527,9 +6527,9 @@
  SNW_conservative_monarchism:0 "Federal Kingdom of Sanwi"
  SNW_conservative_monarchism_DEF:0 "Federal Kingdom of Sanwi"
  SNW_conservative_monarchism_ADJ:0 "Sanwi"
- SNW_stratocratic:0 "Sanwi Military Junta"
- SNW_stratocratic_DEF:0 "Sanwi Military Junta"
- SNW_stratocratic_ADJ:0 "Sanwi"
+ SNW_stratocratic:0 "Jihadist Front of Northern Nigeria"
+ SNW_stratocratic_DEF:0 "The Jihadist Front of Northern Nigeria"
+ SNW_stratocratic_ADJ:0 "Nigerian"
  SNW_authoritarian_monarchism:0 "Kingdom of Sanwi"
  SNW_authoritarian_monarchism_DEF:0 "Kingdom of Sanwi"
  SNW_authoritarian_monarchism_ADJ:0 "Sanwi"
@@ -6594,9 +6594,9 @@
  GCO_conservative_monarchism:0 "Federal Kingdom of Gold Coast"
  GCO_conservative_monarchism_DEF:0 "Federal Kingdom of Gold Coast"
  GCO_conservative_monarchism_ADJ:0 "Gold Coaster"
- GCO_stratocratic:0 "Gold Coaster Military Junta"
- GCO_stratocratic_DEF:0 "Gold Coaster Military Junta"
- GCO_stratocratic_ADJ:0 "Gold Coaster"
+ GCO_stratocratic:0 "Kwara Regional Militia"
+ GCO_stratocratic_DEF:0 "The Kwara Regional Militia"
+ GCO_stratocratic_ADJ:0 "Kwara"
  GCO_authoritarian_monarchism:0 "Colony of the Gold Coast"
  GCO_authoritarian_monarchism_DEF:0 "The Colony of the Gold Coast"
  GCO_authoritarian_monarchism_ADJ:0 "Gold Coaster"
@@ -6675,9 +6675,9 @@
  AHI_authoritarian_monarchism:0 "Crown Colony of Ashanti"
  AHI_authoritarian_monarchism_DEF:0 "The Crown Colony of Ashanti"
  AHI_authoritarian_monarchism_ADJ:0 "Ashanti"
- AHI_stratocratic:0 "Ashanti Military Junta"
- AHI_stratocratic_DEF:0 "Ashanti Military Junta"
- AHI_stratocratic_ADJ:0 "Ashanti"
+ AHI_stratocratic:0 "Kaduna Brigades"
+ AHI_stratocratic_DEF:0 "The Kaduna Brigades"
+ AHI_stratocratic_ADJ:0 "Kaduna"
  AHI_stratocratic_monarchism:0 "Colony of German Gold Coast"
  AHI_stratocratic_monarchism_DEF:0 "Colony of German Gold Coast"
  AHI_stratocratic_monarchism_ADJ:0 "Ashanti"
@@ -9706,9 +9706,9 @@
  NKM_authoritarian_monarchism:0 "Kingdom of Neukamerun"
  NKM_authoritarian_monarchism_DEF:0 "Kingdom of Neukamerun"
  NKM_authoritarian_monarchism_ADJ:0 "Kamerun"
- NKM_stratocratic:0 "German Kamerun"
- NKM_stratocratic_DEF:0 "German Kamerun"
- NKM_stratocratic_ADJ:0 "German-Kamerunisch"
+ NKM_stratocratic:0 "Liberation Front of Abuja"
+ NKM_stratocratic_DEF:0 "The Liberation Front of Abuja"
+ NKM_stratocratic_ADJ:0 "Abujan"
  NKM_stratocratic_monarchism:0 "Wehrstaat Kamerun"
  NKM_stratocratic_monarchism_DEF:0 "Das Wehrstaat Kamerun"
  NKM_stratocratic_monarchism_ADJ:0 "Kamerunisch"
@@ -15203,9 +15203,9 @@
  BCH_conservative_monarchism:0 "Federal Kingdom of Bauchi"
  BCH_conservative_monarchism_DEF:0 "Federal Kingdom of Bauchi"
  BCH_conservative_monarchism_ADJ:0 "Bauchi"
- BCH_stratocratic:0 "Bauchi Military Junta"
- BCH_stratocratic_DEF:0 "Bauchi Military Junta"
- BCH_stratocratic_ADJ:0 "Bauchi"
+ BCH_stratocratic:0 "Bouza Militias"
+ BCH_stratocratic_DEF:0 "The Bouza Militias"
+ BCH_stratocratic_ADJ:0 "Bouza"
  BCH_authoritarian_monarchism:0 "Kingdom of Bauchi"
  BCH_authoritarian_monarchism_DEF:0 "Kingdom of Bauchi"
  BCH_authoritarian_monarchism_ADJ:0 "Bauchi"
