--- a/localisation/english/MM_countries2_l_english.yml
+++ b/localisation/english/MM_countries2_l_english.yml
@@ -40358,8 +40358,8 @@
  LB2_anocratic_republic_DEF:0 "The Government of the United States of America in Liberia"
  LB2_neutrality:0 "Republic of New Maryland"
  LB2_neutrality_DEF:0 "The Republic of New Maryland"
- LB2_stratocratic:0 "National Patriotic Front of Liberia"
- LB2_stratocratic_DEF:0 "The National Patriotic Front of Liberia"
+ LB2_stratocratic:0 "Sokoto Liberation Army"
+ LB2_stratocratic_DEF:0 "The Sokoto Liberation Army"
  LB2_right_anarchism:0 "Liberian Mercenary State"
  LB2_right_anarchism_DEF:0 "The Liberian Mercenary State"
 
