--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -407,6 +407,8 @@
  TUN_neutrality_DEF:0 "The Republic of Tunisia"
  TUN_communism:0 "Tunisian Soviet"
  TUN_communism_DEF:0 "The Tunisian Soviet"
+ TUN_socialism_ideology:0 "Great Socialist People's Tunisian Arab Jamahiriya"
+ TUN_socialism_ideology_DEF:0 "The Great Socialist People's Tunisian Arab Jamahiriya"
  TUN_monarchism:0 "Kingdom of Tunisia"
  TUN_monarchism_DEF:0 "The Kingdom of Tunisia"
  TUN_authoritarian_monarchism:0 "French Protectorate of Tunisia"
@@ -4586,8 +4588,8 @@
  LIB_neutrality_DEF:0 "The Territory of Liberia"
  LIB_authoritarian_monarchism:0 "Protectorate of the Grain Coast"
  LIB_authoritarian_monarchism_DEF:0 "The Protectorate of the Grain Coast"
- LIB_stratocratic:0 "Liberian Military Junta"
- LIB_stratocratic_DEF:0 "The Liberian Military Junta"
+ LIB_stratocratic:0 "Sakaba Freedom Fighters"
+ LIB_stratocratic_DEF:0 "The Sakaba Freedom Fighters"
  LIB_stratocratic_monarchism:0 "Kingdom of Maryland"
  LIB_stratocratic_monarchism_DEF:0 "The Kingdom of Maryland"
  LIB_monarchism:0 "Kingdom of Liberia"
@@ -4964,8 +4966,8 @@
  EGY_vanguardism_DEF:0 "The Egyptian Soviet"
  EGY_communism:0 "Egyptian Commune"
  EGY_communism_DEF:0 "The Egyptian Commune"
- EGY_socialism_ideology:0 "United Arab Republic"
- EGY_socialism_ideology_DEF:0 "The United Arab Republic"
+ EGY_socialism_ideology:0 "Great Socialist People's Egyptian Jamahiriya"
+ EGY_socialism_ideology_DEF:0 "The Great Socialist People's Egyptian Jamahiriya"
  EGY_socialist_monarchy:0 "United Kingdoms of the Nile"
  EGY_socialist_monarchy_DEF:0 "The United Kingdoms of the Nile"
  EGY_liberal_republic:0 "Arab Republic of Egypt"
@@ -5968,8 +5970,8 @@
  ALG_democratic_DEF:0 "The Republic of Algeria"
  ALG_liberal_republic:0 "Algerian Republic"
  ALG_liberal_republic_DEF:0 "The Algerian Republic"
- ALG_socialism_ideology:0 "People's Democratic Republic of Algeria"
- ALG_socialism_ideology_DEF:0 "The People's Democratic Republic of Algeria"
+ ALG_socialism_ideology:0 "Great Socialist People's Algerian Arab Jamahiriya"
+ ALG_socialism_ideology_DEF:0 "The Great Socialist People's Algerian Arab Jamahiriya"
  ALG_communism:0 "Algerian Soviet"
  ALG_communism_DEF:0 "The Algerian Soviet"
  ALG_anocratic_republic:0 "People's Democratic Republic of Algeria"
@@ -7129,8 +7131,8 @@
  CHA_stratocratic_monarchism_DEF:0 "The Empire of Tchad"
  CHA_democratic:0 "Republic of Chad"
  CHA_democratic_DEF:0 "The Republic of Chad"
- CHA_stratocratic:0 "Republic of Chad"
- CHA_stratocratic_DEF:0 "The Republic of Chad"
+ CHA_stratocratic:0 "Liberation Army of Libante and Logobou"
+ CHA_stratocratic_DEF:0 "The Liberation Army of Libante and Logobou"
  CHA_neutrality:0 "Territory of Tchad and the Central Sahara"
  CHA_neutrality_DEF:0 "The Territory of Tchad and the Central Sahara"
  CHA_communism:0 "People's Republic of Tchad"
@@ -7172,8 +7174,8 @@
  GHA_democratic_monarchism_DEF:0 "The Colony of the Swedish Gold Coast"
  GHA_stratocratic_monarchism:0 "Colony of German Gold Coast"
  GHA_stratocratic_monarchism_DEF:0 "The Colony of German Gold Coast"
- GHA_authoritarian_monarchism:0 "Colony of the Gold Coast"
- GHA_authoritarian_monarchism_DEF:0 "The Colony of the Gold Coast"
+ GHA_authoritarian_monarchism:0 "Kangiwa Salvation Army"
+ GHA_authoritarian_monarchism_DEF:0 "The Kangiwa Salvation Army"
  GHA_national_socialism:0 "Reichskolonie Goldküste"
  GHA_national_socialism_DEF:0 "das Reichskolonie Goldküste"
  GHA_ADJ:0 "Ghanan"
@@ -10948,8 +10950,8 @@
  GNB_republican_fascism:0 "Colony of Portuguese Guinea"
  GNB_republican_fascism_DEF:0 "The Colony of Portuguese Guinea"
  GNB_republican_fascism_ADJ:0 "Portuguese-Guinean"
- GNB_authoritarian_monarchism:0 "Colony of Portuguese West Africa"
- GNB_authoritarian_monarchism_DEF:0 "The Colony of Portuguese West Africa"
+ GNB_authoritarian_monarchism:0 "Kano Freedom Front"
+ GNB_authoritarian_monarchism_DEF:0 "The Kano Freedom Front"
  GNB_stratocratic_monarchism:0 "Colony of German Guinea-Bissau"
  GNB_stratocratic_monarchism_DEF:0 "The Colony of German Guinea-Bissau"
  GNB_communism:0 "Guinea-Bissau"
@@ -11378,8 +11380,8 @@
  SEN_socialism_ideology_DEF:0 "The Senegambia Confederation"
  SEN_conservative_monarchism:0 "Colony of the Dutch Bovenkust"
  SEN_conservative_monarchism_DEF:0 "The Colony of the Dutch Bovenkust"
- SEN_authoritarian_monarchism:0 "Protectorate of Senegal"
- SEN_authoritarian_monarchism_DEF:0 "The Protectorate of Senegal"
+ SEN_authoritarian_monarchism:0 "Red Army of Maradi"
+ SEN_authoritarian_monarchism_DEF:0 "The Red Army of Maradi"
  SEN_stratocratic_monarchism:0 "Colony of German Senegal"
  SEN_stratocratic_monarchism_DEF:0 "The Colony of German Senegal"
  SEN_ADJ:0 "Senegalese"
@@ -11446,8 +11448,8 @@
  SIE_centrist_republic_DEF:0 "The Republic of Salone"
  SIE_centrist_monarchism:0 "Chiefdom of Sierra Leone"
  SIE_centrist_monarchism_DEF:0 "The Chiefdom of Sierra Leone"
- SIE_stratocratic:0 "Mendi State"
- SIE_stratocratic_DEF:0 "The Mendi State"
+ SIE_stratocratic:0 "Aramoko Militia"
+ SIE_stratocratic_DEF:0 "The Aramoko Militia"
  SIE_anarchism_ideology:0 "Temne Tribes"
  SIE_anarchism_ideology_DEF:0 "The Temne Tribes"
  SIE_anarchism_ideology_ADJ:0 "Temne"
@@ -12521,8 +12523,8 @@
  GNA_national_socialism_DEF:0 "das Reichskolonie Guinea"
  GNA_stratocratic_monarchism:0 "Colony of German Guinea"
  GNA_stratocratic_monarchism_DEF:0 "The Colony of German Guinea"
- GNA_stratocratic:0 "Republic of Guinea"
- GNA_stratocratic_DEF:0 "The Republic of Guinea"
+ GNA_stratocratic:0 "Katsina Army and Militia"
+ GNA_stratocratic_DEF:0 "The Katsina Army and Militia"
  GNA_authoritarian_monarchism:0 "Guinea Protectorate"
  GNA_authoritarian_monarchism_DEF:0 "The Guinea Protectorate"
  GNA_ADJ:0 "Guinean"
@@ -12583,8 +12585,8 @@
  NGR_fascism_DEF:0 "The Colony of the Italian Niger"
  NGR_centrist_republic:0 "Niger"
  NGR_centrist_republic_DEF:0 "Niger"
- NGR_stratocratic:0 "Niger Military Territory"
- NGR_stratocratic_DEF:0 "The Niger Military Territory"
+ NGR_stratocratic:0 "National Council for the Restoration of Niger"
+ NGR_stratocratic_DEF:0 "The National Council for the Restoration of Niger"
  NGR_ADJ:0 "Nigerien"
  
  QAT_national_socialism:0 "National Socialist State of Qatar"
@@ -16862,9 +16864,9 @@
  BIA_fascism:0 "State of Biafra"
  BIA_fascism_DEF:0 "The State of Biafra"
  BIA_fascism_ADJ:0 "Biafran"
- BIA_neutrality:0 "Biafra"
- BIA_neutrality_DEF:0 "The Biafra"
- BIA_neutrality_ADJ:0 "Biafran"
+ BIA_neutrality:0 "m'Boulou Brigades"
+ BIA_neutrality_DEF:0 "The m'Boulou Brigades"
+ BIA_neutrality_ADJ:0 "m'Boulou"
  BIA_monarchism:0 "Kingdom of Biafra"
  BIA_monarchism_DEF:0 "The Kingdom of Biafra"
  BIA_monarchism_ADJ:0 "Biafran"
@@ -27082,8 +27084,8 @@
  GB2_communism_DEF:0 "The People's Republic of Bathurst"
  GB2_fascism:0 "Gambian State"
  GB2_fascism_DEF:0 "The Gambian State"
- GB2_authoritarian_monarchism:0 "Gambia Colony"
- GB2_authoritarian_monarchism_DEF:0 "The Gambia Colony"
+ GB2_authoritarian_monarchism:0 "Kano People's Army"
+ GB2_authoritarian_monarchism_DEF:0 "The Kano People's Army"
  GB2_ADJ:0 "Gambian"
 
  KBA_monarchism:0 "Emirate of Kalba"
@@ -27838,9 +27840,9 @@
  LGC_neutrality:0 "Lagos State"
  LGC_neutrality_DEF:0 "The Lagos State"
  LGC_neutrality_ADJ:0 "Lagotian"
- LGC_authoritarian_monarchism:0 "Lagos Protectorate"
- LGC_authoritarian_monarchism_DEF:0 "The Lagos Protectorate"
- LGC_authoritarian_monarchism_ADJ:0 "Lagotian"
+ LGC_authoritarian_monarchism:0 "Parakou State Army"
+ LGC_authoritarian_monarchism_DEF:0 "The Parakou State Army"
+ LGC_authoritarian_monarchism_ADJ:0 "Parakou"
 
  LGP_monarchism:0 "Kingdom of Lagos Protectorate"
  LGP_monarchism_DEF:0 "The Kingdom of Lagos Protectorate"
@@ -27854,9 +27856,9 @@
  LGP_fascism:0 "Oyo Empire"
  LGP_fascism_DEF:0 "The Oyo Empire"
  LGP_fascism_ADJ:0 "Oyo"
- LGP_neutrality:0 "Lagos Protectorate"
- LGP_neutrality_DEF:0 "The Lagos Protectorate"
- LGP_neutrality_ADJ:0 "Lagotian"
+ LGP_neutrality:0 "Nikki Patriotic Front"
+ LGP_neutrality_DEF:0 "The Nikki Patriotic Front"
+ LGP_neutrality_ADJ:0 "Nikki"
 
  NNI_anarchism_ideology:0 "Djerma Tribes"
  NNI_anarchism_ideology_DEF:0 "The Djerma Tribes"
@@ -27898,9 +27900,9 @@
  SNI_conservative_monarchism:0 "Nigerian Free State"
  SNI_conservative_monarchism_DEF:0 "The Nigerian Free State"
  SNI_conservative_monarchism_ADJ:0 "Nigerian"
- SNI_neutrality:0 "Protectorate of Southern Nigeria"
- SNI_neutrality_DEF:0 "The Protectorate of Southern Nigeria"
- SNI_neutrality_ADJ:0 "Southern Nigerian"
+ SNI_neutrality:0 "Kara Koto Front"
+ SNI_neutrality_DEF:0 "The Kara Koto Front"
+ SNI_neutrality_ADJ:0 "Karan"
  SNI_monarchism:0 "Kingdom of Southern Nigeria"
  SNI_monarchism_DEF:0 "The Kingdom of Southern Nigeria"
  SNI_monarchism_ADJ:0 "Southern Nigerian"
