she skibidi ohiod on my fanum tax

--- a/localisation/english/MM_countries2_l_english.yml
+++ b/localisation/english/MM_countries2_l_english.yml
@@ -21101,9 +21101,9 @@
  RJV_stratocratic:0 "Rojavan Military Junta"
  RJV_stratocratic_DEF:0 "Rojavan Military Junta"
  RJV_stratocratic_ADJ:0 "Rojavan"
- RJV_authoritarian_monarchism:0 "Rojavan Kingdom"
- RJV_authoritarian_monarchism_DEF:0 "Rojavan Kingdom"
- RJV_authoritarian_monarchism_ADJ:0 "Rojavan"
+ RJV_authoritarian_monarchism:0 "Hamoukar"
+ RJV_authoritarian_monarchism_DEF:0 "The City-State of Hamoukar"
+ RJV_authoritarian_monarchism_ADJ:0 "Hamouk"
  RJV_republican_fascism:0 "Greater Rojavan State"
  RJV_republican_fascism_DEF:0 "Greater Rojavan State"
  RJV_republican_fascism_ADJ:0 "Rojavan"
@@ -29644,8 +29644,8 @@
  MLP_DEF:0 "Milan"
  MLP_anarchism_ideology:0 "Milan Tribes"
  MLP_anarchism_ideology_DEF:0 "The Milan Tribes"
- MLP_conservative_monarchism:0 "Milan Confederacy"
- MLP_conservative_monarchism_DEF:0 "The Milan Confederacy"
+ MLP_authoritarian_monarchism:0 "Nagar"
+ MLP_authoritarian_monarchism_DEF:0 "The City-State of Nagar"
  MLP_ADJ:0 "Kurdish"
 
  AT1:0 "Pitjantjatjara Tribes"
@@ -31803,8 +31803,8 @@
 
  E20:0 "Begemder"
  E20_DEF:0 "Begemder"
- E20_authoritarian_monarchism:0 "Begemder Province"
- E20_authoritarian_monarchism_DEF:0 "The Begemder Province"
+ E20_authoritarian_monarchism:0 "Belam Tribes"
+ E20_authoritarian_monarchism_DEF:0 "The Belam Tribes"
  E20_monarchism:0 "Kingdom of Begemder"
  E20_monarchism_DEF:0 "The Kingdom of Begemder"
  E20_democratic_monarchism:0 "Duchy of Begemder"
@@ -37012,9 +37012,9 @@
  TT1_anarchism_ideology:0 "Maasai Tribes"
  TT1_anarchism_ideology_DEF:0 "The Maasai Tribes"
  TT1_anarchism_ideology_ADJ:0 "Maasai"
- TT1_stratocratic_monarchism:0 "Wehrstaat Ostafrika"
- TT1_stratocratic_monarchism_DEF:0 "Das Wehrstaat Ostafrika"
- TT1_stratocratic_monarchism_ADJ:0 "Ostafrikanisch"
+ TT1_authoritarian_monarchism:0 "M'dje Chiefdom"
+ TT1_authoritarian_monarchism_DEF:0 "The M'dje Chiefdom"
+ TT1_authoritarian_monarchism_ADJ:0 "M'dje"
 
  TT2:0 "Sagara Tribes"
  TT2_DEF:0 "The Sagara Tribes"
