--- a/localisation/english/MM_countries_l_english.yml
+++ b/localisation/english/MM_countries_l_english.yml
@@ -18682,9 +18682,9 @@
  TTI_stratocratic:0 "Tati Military Junta"
  TTI_stratocratic_DEF:0 "Tati Military Junta"
  TTI_stratocratic_ADJ:0 "Tati"
- TTI_authoritarian_monarchism:0 "Kingdom of Tati Land"
- TTI_authoritarian_monarchism_DEF:0 "Kingdom of Tati Land"
- TTI_authoritarian_monarchism_ADJ:0 "Tati"
+ TTI_authoritarian_monarchism:0 "Harogh Chiefdom"
+ TTI_authoritarian_monarchism_DEF:0 "The Harogh Chiefdom"
+ TTI_authoritarian_monarchism_ADJ:0 "Harogh"
  TTI_republican_fascism:0 "Tati State"
  TTI_republican_fascism_DEF:0 "Tati State"
  TTI_republican_fascism_ADJ:0 "Tati"
