--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -12441,9 +12441,9 @@
  BHR_conservative_monarchism:0 "State of Bahrain"
  BHR_conservative_monarchism_DEF:0 "The State of Bahrain"
  BHR_conservative_monarchism_ADJ:0 "Bahraini"
- BHR_authoritarian_monarchism:0 "City of Kish"
- BHR_authoritarian_monarchism_DEF:0 "The City of Kish"
- BHR_authoritarian_monarchism_ADJ:0 "Bahraini"
+ BHR_authoritarian_monarchism:0 "Kingdom of Kish"
+ BHR_authoritarian_monarchism_DEF:0 "The Kingdom of Kish"
+ BHR_authoritarian_monarchism_ADJ:0 "Kishi"
  BHR_centrist_monarchism:0 "Protectorate of Bahrain and Dependencies"
  BHR_centrist_monarchism_DEF:0 "The Protectorate of Bahrain and Dependencies"
  BHR_centrist_monarchism_ADJ:0 "Bahraini"
@@ -12667,8 +12667,8 @@
  NGR_anocratic_republic_DEF:0 "The Republic of the Niger"
  NGR_neutrality:0 "Colony of Niger"
  NGR_neutrality_DEF:0 "The Colony of Niger"
- NGR_authoritarian_monarchism:0 "Protectorate of Upper Nigeria"
- NGR_authoritarian_monarchism_DEF:0 "The Protectorate of Upper Nigeria"
+ NGR_authoritarian_monarchism:0 "Temehu Tribes"
+ NGR_authoritarian_monarchism_DEF:0 "The Temehu Tribes"
  NGR_stratocratic:0 "Niger Military Territory"
  NGR_stratocratic_DEF:0 "The Niger Military Territory"
  NGR_monarchism:0 "Kingdom of Dendi"
@@ -12736,9 +12736,9 @@
  SSU_neutrality_DEF:0 "The South Sudanese State"
  SSU_communism:0 "Democratic People's Republic of South Sudan"
  SSU_communism_DEF:0 "The Democratic People's Republic of South Sudan"
- SSU_authoritarian_monarchism:0 "Colony of South Sudan"
- SSU_authoritarian_monarchism_DEF:0 "The Colony of South Sudan"
- SSU_authoritarian_monarchism_ADJ:0 "South Sudanese"
+ SSU_authoritarian_monarchism:0 "Upper Nubian Tribes"
+ SSU_authoritarian_monarchism_DEF:0 "The Upper Nubian Tribes"
+ SSU_authoritarian_monarchism_ADJ:0 "Upper Nubian"
  SSU_monarchism:0 "Kingdom of South Sudan"
  SSU_monarchism_DEF:0 "The Kingdom of South Sudan"
  SSU_stratocratic:0 "Southern Sudan Provisional Government"
@@ -19527,9 +19527,9 @@
  CYR_neutrality:0 "State of Cyrenaica"
  CYR_neutrality_DEF:0 "The State of Cyrenaica"
  CYR_neutrality_ADJ:0 "Cyrenaican"
- CYR_authoritarian_monarchism:0 "Senussi Order"
- CYR_authoritarian_monarchism_DEF:0 "The Senussi Order"
- CYR_authoritarian_monarchism_ADJ:0 "Senussi"
+ CYR_authoritarian_monarchism:0 "Rebu Tribes"
+ CYR_authoritarian_monarchism_DEF:0 "The Rebu Tribes"
+ CYR_authoritarian_monarchism_ADJ:0 "Rebu"
  CYR_stratocratic_monarchism:0 "Senussi Kingdom of Libya"
  CYR_stratocratic_monarchism_DEF:0 "The Senussi Kingdom of Libya"
  CYR_stratocratic_monarchism_ADJ:0 "Libyan"
@@ -20715,9 +20715,9 @@
  AGD_fascism:0 "Colony of the Italian Sahara"
  AGD_fascism_DEF:0 "The Colony of the Italian Sahara"
  AGD_fascism_ADJ:0 "Italian Saharan"
- AGD_authoritarian_monarchism:0 "Agadezi Empire"
- AGD_authoritarian_monarchism_DEF:0 "The Agadezi Empire"
- AGD_authoritarian_monarchism_ADJ:0 "Agadezi"
+ AGD_authoritarian_monarchism:0 "Tehenu Tribes"
+ AGD_authoritarian_monarchism_DEF:0 "The Tehenu Tribes"
+ AGD_authoritarian_monarchism_ADJ:0 "Tehenu"
  AGD_neutrality:0 "Agadez"
  AGD_neutrality_DEF:0 "gadez"
  AGD_neutrality_ADJ:0 "Agadezi"
@@ -29907,15 +29907,15 @@
  ASY_stratocratic_DEF:0 "The Assyrian Provisional Government"
  ASY_socialism_ideology:0 "Assyrian Republic"
  ASY_socialism_ideology_DEF:0 "The Assyrian Republic"
- ASY_democratic_monarchism:0 "Jalayirid Sultanate"
- ASY_democratic_monarchism_DEF:0 "The Jalayirid Sultanate"
+ ASY_authoritarian_monarchism:0 "Urkesh"
+ ASY_authoritarian_monarchism_DEF:0 "The City-State of Urkesh"
  ASY_ADJ:0 "Assyrian"
 
  ETC_neutrality:0 "State of East Turcomania"
  ETC_neutrality_DEF:0 "The East Turcomania"
  ETC_neutrality_ADJ:0 "Turcomanian"
- ETC_anarchism:0 "Chago Mami"
- ETC_anarchism:0 "The Town of Chago Mami"
+ ETC_authoritarian_monarchism:0 "Ninua"
+ ETC_authoritarian_monarchism:0 "The City-State of Ninua"
  ETC_monarchism:0 "Kingdom of East Turcomania"
  ETC_monarchism_DEF:0 "The Kingdom of East Turcomania"
  ETC_monarchism_ADJ:0 "Turcomanian"
@@ -29936,9 +29936,9 @@
  WTC_neutrality:0 "State of West Turcomania"
  WTC_neutrality_DEF:0 "The West Turcomania"
  WTC_neutrality_ADJ:0 "Turcomanian"
- WTC_authoritarian_monarchism:0 "Kingdom of West Turcomania"
- WTC_authoritarian_monarchism_DEF:0 "The Kingdom of West Turcomania"
- WTC_authoritarian_monarchism_ADJ:0 "Turcomanian"
+ WTC_authoritarian_monarchism:0 "Mari"
+ WTC_authoritarian_monarchism_DEF:0 "The City-State of Mari"
+ WTC_authoritarian_monarchism_ADJ:0 "Mari"
  WTC_democratic:0 "Republic of West Turcomania"
  WTC_democratic_DEF:0 "The Republic of West Turcomania"
  WTC_democratic_ADJ:0 "Turcomanian"
@@ -30088,8 +30088,8 @@
  KRM_neutrality:0 "Kerman"
  KRM_neutrality_DEF:0 "The Kerman"
  KRM_neutrality_ADJ:0 "Kermani"
- KRM_authoritarian_monarchism:0 "City of Uruk"
- KRM_authoritarian_monarchism_DEF:0 "The City of Uruk"
+ KRM_authoritarian_monarchism:0 "Kingdom of Uruk"
+ KRM_authoritarian_monarchism_DEF:0 "The Kingdom of Uruk"
  KRM_monarchism_ADJ:0 "Kermani"
  KRM_democratic:0 "Republic of Kerman"
  KRM_democratic_DEF:0 "The Republic of Kerman"
