--- a/localisation/english/MM_countries2_l_english.yml
+++ b/localisation/english/MM_countries2_l_english.yml
@@ -9549,9 +9549,9 @@
  CSK_neutrality:0 "State of Cossackia"
  CSK_neutrality_DEF:0 "The State of Cossackia"
  CSK_neutrality_ADJ:0 "Cossack"
- CSK_authoritarian_monarchism:0 "Kingdom of the Cossacks"
- CSK_authoritarian_monarchism_DEF:0 "The Kingdom of the Cossacks"
- CSK_authoritarian_monarchism_ADJ:0 "Cossack"
+ CSK_authoritarian_monarchism:0 "Larak"
+ CSK_authoritarian_monarchism_DEF:0 "The City-State of Larak"
+ CSK_authoritarian_monarchism_ADJ:0 "Larak"
  CSK_stratocratic:0 "Almighty Cossack Host"
  CSK_stratocratic_DEF:0 "The Almighty Cossack Host"
  CSK_stratocratic_ADJ:0 "Cossack"
@@ -12580,9 +12580,9 @@
  BGZ_stratocratic:0 "Benishangul Gumuz Military Junta"
  BGZ_stratocratic_DEF:0 "Benishangul Gumuz Military Junta"
  BGZ_stratocratic_ADJ:0 "Benishangul Gumuz"
- BGZ_authoritarian_monarchism:0 "Benishangul Gumuz Kingdom"
- BGZ_authoritarian_monarchism_DEF:0 "Benishangul Gumuz Kingdom"
- BGZ_authoritarian_monarchism_ADJ:0 "Benishangul Gumuz"
+ BGZ_authoritarian_monarchism:0 "Akshak"
+ BGZ_authoritarian_monarchism_DEF:0 "The City-State of Akshak"
+ BGZ_authoritarian_monarchism_ADJ:0 "Akshak"
  BGZ_republican_fascism:0 "Greater Benishangul Gumuz State"
  BGZ_republican_fascism_DEF:0 "Greater Benishangul Gumuz State"
  BGZ_republican_fascism_ADJ:0 "Benishangul Gumuz"
@@ -15728,9 +15728,9 @@
  BZD_stratocratic:0 "Bayazid Military Junta"
  BZD_stratocratic_DEF:0 "Bayazid Military Junta"
  BZD_stratocratic_ADJ:0 "Bayazid"
- BZD_authoritarian_monarchism:0 "Bayazid Kingdom"
- BZD_authoritarian_monarchism_DEF:0 "Bayazid Kingdom"
- BZD_authoritarian_monarchism_ADJ:0 "Bayazid"
+ BZD_authoritarian_monarchism:0 "Kura-Araxes"
+ BZD_authoritarian_monarchism_DEF:0 "The Kura-Araxes"
+ BZD_authoritarian_monarchism_ADJ:0 "Arakid"
  BZD_republican_fascism:0 "Greater Bayazid State"
  BZD_republican_fascism_DEF:0 "Greater Bayazid State"
  BZD_republican_fascism_ADJ:0 "Bayazid"
@@ -28577,8 +28577,8 @@
  RJS_stratocratic_DEF:0 "The Military Administration of Rajasthan"
  RJS_stratocratic_monarchism:0 "Rajputana Protectorates"
  RJS_stratocratic_monarchism_DEF:0 "The Rajputana Protectorates"
- RJS_authoritarian_monarchism:0 "Rajputana Agency"
- RJS_authoritarian_monarchism_DEF:0 "The Rajputana Agency"
+ RJS_authoritarian_monarchism:0 "Zin-Balshabu"
+ RJS_authoritarian_monarchism_DEF:0 "The Chiefdom of the Well of Balshabu in Zin"
  RJS_monarchism:0 "Raj of Vikramaditya"
  RJS_monarchism_DEF:0 "The Raj of Vikramaditya"
  RJS_theocratic:0 "Hindu State of Rajasthan"
