--- a/localisation/english/MM_states_names_l_english.yml
+++ b/localisation/english/MM_states_names_l_english.yml
@@ -289,7 +289,7 @@
  STATE_288:0 "Rangoon"
  STATE_289:0 "Bangkok"
  STATE_290:0 "Tetuán"
- STATE_291:0 "Baghdad"
+ STATE_291:0 "Karkh"
  STATE_292:0 "Nejd"
  STATE_293:0 "Yemen"
  STATE_294:0 "Oman"
@@ -2651,6 +2651,7 @@
  STATE_2650:0 "Stanley"
  STATE_2651:0 "Easter Island"
  STATE_2652:0 "Tinian"
+ STATE_2653:0 "Bikar"
  STATE_2654:0 "Rota"
  STATE_2655:0 "Anatahan"
  STATE_2656:0 "Cyprus DMZ"
@@ -6974,7 +6975,7 @@
  STATE_6974:0 "North Namzah"
  STATE_6975:0 "West Kut"
  STATE_6976:0 "South Penjwen"
- STATE_6977:0 "East Ramadi"
+ STATE_6977:0 "Baqubah"
  STATE_6978:0 "North Basra"
  STATE_6979:0 "East Balad"
  STATE_6980:0 "North Balad"
@@ -17451,23 +17452,23 @@
  STATE_17451:0 "Some State"
  STATE_17452:0 "Some State"
  STATE_17453:0 "Some State"
- STATE_17454:0 "Some State"
+ STATE_17454:0 "Hillah"
  STATE_17455:0 "Some State"
  STATE_17456:0 "Some State"
  STATE_17457:0 "Some State"
- STATE_17458:0 "Some State"
- STATE_17459:0 "Some State"
- STATE_17460:0 "Some State"
- STATE_17461:0 "Some State"
- STATE_17462:0 "Some State"
- STATE_17463:0 "Some State"
- STATE_17464:0 "Some State"
- STATE_17465:0 "Some State"
- STATE_17466:0 "Some State"
- STATE_17467:0 "Some State"
- STATE_17468:0 "Some State"
- STATE_17469:0 "Some State"
- STATE_17470:0 "Some State"
+ STATE_17458:0 "Mahmudiya"
+ STATE_17459:0 "Al-Suwaira"
+ STATE_17460:0 "Bo'Aitha"
+ STATE_17461:0 "Za'Franiya"
+ STATE_17462:0 "Nahrawan"
+ STATE_17463:0 "Adamiyah"
+ STATE_17464:0 "Risafa"
+ STATE_17465:0 "Bani Saad"
+ STATE_17466:0 "Hosseinia"
+ STATE_17467:0 "Al Falahat"
+ STATE_17468:0 "Nebai"
+ STATE_17469:0 "Al Hatamia"
+ STATE_17470:0 "Radwaniyah"
  STATE_17471:0 "Some State"
  STATE_17472:0 "Some State"
  STATE_17473:0 "Some State"
