--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -5858,9 +5858,9 @@
  HJZ_monarchism:0 "Kingdom of Hejaz"
  HJZ_monarchism_DEF:0 "The Kingdom of Hejaz"
  HJZ_monarchism_ADJ:0 "Hejazi"
- HJZ_authoritarian_monarchism:0 "Viceroyalty of Hejaz"
- HJZ_authoritarian_monarchism_DEF:0 "The Viceroyalty of Hejaz"
- HJZ_authoritarian_monarchism_ADJ:0 "Saudi Arabian"
+ HJZ_authoritarian_monarchism:0 "Ke'ba Tribes"
+ HJZ_authoritarian_monarchism_DEF:0 "The Ke'ba Tribes"
+ HJZ_authoritarian_monarchism_ADJ:0 "Ke'ba"
  HJZ_centrist_monarchism:0 "Kingdom of Hashemite Arabia"
  HJZ_centrist_monarchism_DEF:0 "The Kingdom of Hashemite Arabia"
  HJZ_centrist_monarchism_ADJ:0 "Hashemite Arabian"
@@ -12210,8 +12210,8 @@
  MLT_conservative_monarchism_DEF:0 "The Dominon of Malta"
  MLT_neutrality:0 "Colony of French Malta"
  MLT_neutrality_DEF:0 "The Colony of French Malta"
- MLT_authoritarian_monarchism:0 "Crown Colony of the Island of Malta and its Dependencies"
- MLT_authoritarian_monarchism_DEF:0 "The Crown Colony of the Island of Malta and its Dependencies"
+ MLT_authoritarian_monarchism:0 "Tarxien Tribes"
+ MLT_authoritarian_monarchism_DEF:0 "The Tarxien Tribes"
  MLT_stratocratic:0 "Order of Malta"
  MLT_stratocratic_DEF:0 "The Order of Malta"
  MLT_stratocratic_monarchism:0 "Colony of the Island of Malta and its Dependencies"
@@ -13407,9 +13407,10 @@
  ABK_vanguardism:0 "Abkhaz Autonomous Socialist Soviet Republic"
  ABK_vanguardism_DEF:0 "The Abkhaz Autonomous Socialist Soviet Republic"
  ABK_vanguardism_ADJ:0 "Abkhazian"
- ABK_authoritarian_monarchism:0 "Principality of Abkhazia"
- ABK_authoritarian_monarchism_DEF:0 "The Principality of Abkhazia"
- ABK_authoritarian_monarchism_ADJ:0 "Abkhazian"
+ ABK_authoritarian_monarchism:0 "Maykop Tribes"
+ ABK_authoritarian_monarchism_DEF:0 "The Maykop Tribes"
+ ABK_authoritarian_monarchism_ADJ:0 "Maykop"
+ ABK_authoritarian_monarchism_ADJ:0 "Maykop"
  ABK_national_socialism:0 "Sonderkommissariat Abchasien"
  ABK_national_socialism_DEF:0 "das Sonderkommissariat Abchasien"
  ABK_national_socialism_ADJ:0 "Abkhazian"
@@ -19843,9 +19844,9 @@
  SIN_neutrality:0 "Sinai"
  SIN_neutrality_DEF:0 "The Sinai"
  SIN_neutrality_ADJ:0 "Sinai"
- SIN_monarchism:0 "Kingdom of the Sinai"
- SIN_monarchism_DEF:0 "The Kingdom of the Sinai"
- SIN_monarchism_ADJ:0 "Sinai"
+ SIN_authoritarian_monarchism:0 "Si'ni Tribes"
+ SIN_authoritarian_monarchism_DEF:0 "The Si'ni Tribes"
+ SIN_authoritarian_monarchism_ADJ:0 "Si'ni"
  SIN_centrist_republic:0 "International Authority of Suez-Sinai"
  SIN_centrist_republic_DEF:0 "The International Authority of the Suez and the Sinai Peninsula"
  SIN_theocratic:0 "Fatimid Caliphate"
@@ -29973,9 +29974,9 @@
  MHB_neutrality:0 "Mahabad"
  MHB_neutrality_DEF:0 "The Mahabad"
  MHB_neutrality_ADJ:0 "Mahabadi"
- MHB_monarchism:0 "Kingdom of Mahabad"
- MHB_monarchism_DEF:0 "The Kingdom of Mahabad"
- MHB_monarchism_ADJ:0 "Mahabadi"
+ MHB_authoritarian_monarchism:0 "Kingdom of Urartu"
+ MHB_authoritarian_monarchism_DEF:0 "The Kingdom of Urartu"
+ MHB_authoritarian_monarchism_ADJ:0 "Urartian"
  MHB_democratic:0 "Republic of Mahabad"
  MHB_democratic_DEF:0 "The Republic of Mahabad"
  MHB_democratic_ADJ:0 "Mahabadi"
