fatamogustwerk.gif or is it jif

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3090,8 +3090,8 @@
  TUR_national_conservative_monarchism:0 "Sultanate of the Ottomans"
  TUR_national_conservative_monarchism_DEF:0 "The Sultanate of the Ottomans"
  TUR_national_conservative_monarchism_ADJ:0 "Turkish"
- TUR_anocratic_republic:0 "Government of the Grand National Assembly"
- TUR_anocratic_republic_DEF:0 "The Government of the Grand National Assembly"
+ TUR_anocratic_republic:0 "Republic of Turkey"
+ TUR_anocratic_republic_DEF:0 "The Republic of Turkey"
  TUR_anocratic_republic_ADJ:0 "Turkish"
  TUR_anocratic_monarchism:0 "Sublime Ottoman State"
  TUR_anocratic_monarchism_DEF:0 "The Sublime Ottoman State"
@@ -4034,8 +4034,8 @@
  PER_democratic_DEF:0 "The Republic of Persia"
  PER_conservative_monarchism:0 "Mandate of Persia"
  PER_conservative_monarchism_DEF:0 "The Mandate of Persia"
- PER_anocratic_republic:0 "Iranian Federal Republic"
- PER_anocratic_republic_DEF:0 "The Iranian Federal Republic"
+ PER_anocratic_republic:0 "Federal Republic of Persia"
+ PER_anocratic_republic_DEF:0 "The Federal Republic of Persia"
  PER_anocratic_monarchism:0 "Shahdom of Iran"
  PER_anocratic_monarchism_DEF:0 "Shahdom of Iran"
  PER_neutrality:0 "Persian State"
@@ -9090,8 +9090,8 @@
  KUR_anarchism_DEF:0 "The Town of Gwara"
  KUR_fascism:0 "Italian Protectorate of Kurdistan"
  KUR_fascism_DEF:0 "The Italian Protectorate of Kurdistan"
- KUR_democratic:0 "Republic of Kurdistan"
- KUR_democratic_DEF:0 "The Republic of Kurdistan"
+ KUR_democratic:0 "United Nations Protectorate of Kurdistan"
+ KUR_democratic_DEF:0 "The United Nations Protectorate of Kurdistan"
  KUR_neutrality:0 "Kurdish Republic of Ararat"
  KUR_neutrality_DEF:0 "The Kurdish Republic of Ararat"
  KUR_communism:0 "Kurdish Worker's Republic"
